[tool.poetry]
name = "commandline gpt"
version = "0.1.0"
description = ""
authors = ["Morgan Griffiths <morgangriffiths@openai.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pymongo = "^4.6.1"
click = "^8.1.7"
openai = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
